--- a/src/main/webapp/admin/wizard.xhtml
+++ b/src/main/webapp/admin/wizard.xhtml
@@ -18,74 +18,7 @@
 			</section>
 			<h3>Datos de Colección</h3>
 			<section style="width: 100%">
-				<h:form id="catalogForm">
-					<p:growl id="growl" showDetail="true" />
-					<div class="form-group">
-						<div class="row">
-							<label class="col-md-4 control-label" for="level">Institución:</label>
-							<div class="col-md-8">
-								<h:selectOneMenu id="institution" styleClass="ui-state-default form-control input-sm input-block-level required"
-									value="#{wizardBean.selectedInstitution}">
-									<p:ajax process="@this" update="catalogForm" listener="#{wizardBean.filterCollections()}" />
-									<f:validateBean disabled="true" />
-									<f:selectItem itemLabel="Selecciona una institución..." />
-									<f:selectItems value="#{wizardBean.allInstitutions}" var="ins" itemLabel="#{ins.institutionName}"
-										itemValue="#{ins.idInstitution}" />
-								</h:selectOneMenu>
-							</div>
-						</div>
-						<hr />
-						<div class="row">
-							<label class="col-md-4 control-label" for="level">Colección:</label>
-							<div class="col-md-6">
-								<h:selectOneMenu id="collection" styleClass="ui-state-default form-control input-sm input-block-level required"
-									value="#{wizardBean.selectedCollection}">
-									<p:ajax process="@this" update="catalogForm" listener="#{wizardBean.filterCatalog()}" />
-									<f:validateBean disabled="true" />
-									<f:selectItem itemLabel="Selecciona una colección..." />
-									<f:selectItems value="#{wizardBean.allCollections}" var="col" itemLabel="#{col.collectionName}"
-										itemValue="#{col.idCollection}" />
-								</h:selectOneMenu>
-							</div>
-							
-								<div class="input-group">
-									<span class="input-group-btn"> <p:commandLink id="viewButton" class="btn btn-default btn-secondary btn-action"
-											title="Ficha técnica de #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
-											<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
-										</p:commandLink>
-									</span> <span class="input-group-btn"> <p:commandLink id="editButton" class="btn btn-default btn-sm btn-action"
-											actionListener="#{specimenBean.prepareUpdate(specimen)}">
-											<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-										</p:commandLink>
-									</span> <span class="input-group-btn"> <p:commandLink id="deleteButton"
-											class="btn btn-default btn-sm btn-action">
-											<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-										</p:commandLink>
-									</span>
-								</div>
-						</div>
-						<hr />
-						<div class="row">
-							<label class="col-md-4 control-label" for="level">Catálogo:</label>
-							<div class="col-md-6">
-								<h:selectOneMenu id="catalog" styleClass="ui-state-default form-control input-sm input-block-level required"
-									value="#{wizardBean.selectedCatalog}">
-									<p:ajax process="@this" />
-									<f:validateBean disabled="true" />
-									<f:selectItems value="#{wizardBean.allCatalogs}" var="cat" itemLabel="#{cat.catalogName}"
-										itemValue="#{cat.idCatalog}" />
-								</h:selectOneMenu>
-							</div>
-						</div>
-						<div class="row">
-							<label class="col-md-4 control-label" for="level">ID del registro:</label>
-							<div class="col-md-8">
-								<p:inputText id="idRegBio" value="#{wizardBean.specimen.idBioreg}" title="ID del registro biiológico"
-									rendered="true" />
-							</div>
-						</div>
-					</div>
-				</h:form>
+				<ui:include src="collections.xhtml"></ui:include>
 			</section>
 			<h3>ASGASDF</h3>
 			<section style="width: 100%">
