--- a/src/main/webapp/admin/author.xhtml
+++ b/src/main/webapp/admin/author.xhtml
@@ -1,7 +1,174 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
-	<h:form id="formauthor">
-		<h:dataTable id="dataTableauthor" rendered="#{authorBean.allAuthors != null and !authorBean.allAuthors.isEmpty()}" value="#{authorBean.allAuthors}"
+	<h:form id="deleteModalForm">
+		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="Eliminar registro">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Confirmar eliminación</h4>
+					</div>
+					<div class="modal-body">¿Está seguro que desea eliminar este registro?</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="deleteYesButton" value="Eliminar" action="#{authorBean.delete}" update=":formAuthor"
+								oncomplete="$('#deleteModal').modal('hide')" />
+							<p:commandButton id="deleteNoButton" value="Cancelar" type="button" onclick="$('#deleteModal').modal('hide')" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+
+	<h:form id="editModalForm">
+		<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="Editar Autor">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Editar Autor</h4>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<div class="row">
+								<label class="col-md-4 control-label" for="taxName">Nombre Autor:</label>
+								<div class="col-md-8">
+									<h:inputText id="authorName" styleClass="ui-state-default form-control input-sm input-block-level required"
+										value="#{authorBean.author.authorName}" required="true" requiredMessage="Debes definir el nombre del autor!">
+										<p:ajax process="@this" />
+										<f:validateBean disabled="true" />
+									</h:inputText>
+								</div>
+							</div>
+							<hr />
+							<div class="row">
+								<label class="col-md-4 control-label" for="level">Roles de Autor:</label>
+								<div class="col-md-8">
+									<div class="row">
+										<div class="col-md-1">
+											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.authorEpithet}">
+												<p:ajax process="@this" />
+											</p:selectBooleanCheckbox>
+										</div>
+										<div class="col-md-11">Autor de Epiteto</div>
+									</div>
+									<div class="row">
+										<div class="col-md-1">
+											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.determiner}">
+												<p:ajax process="@this" />
+											</p:selectBooleanCheckbox>
+										</div>
+										<div class="col-md-11">Determinador</div>
+									</div>
+									<div class="row">
+										<div class="col-md-1">
+											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.collector}">
+												<p:ajax process="@this" />
+											</p:selectBooleanCheckbox>
+										</div>
+										<div class="col-md-11">Colector</div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<label class="col-md-4 control-label" for="level">Usuario:</label>
+								<div class="col-md-8">Aqui va lo del usuario</div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="editYesButton" value="Guardar" action="#{authorBean.edit()}" update=":formAuthor"
+								oncomplete="$('#editModal').modal('hide')" />
+							<p:commandButton id="editNoButton" value="Cancelar" type="button" onclick="$('#editModal').modal('hide')" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+	<!-- end edit Modal -->
+
+	<!-- create Modal -->
+	<h:form id="createTaxModalForm">
+		<div class="modal fade" id="createTaxModal" tabindex="-1" role="dialog" aria-labelledby="Crear Clasificación">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Crear clasificación</h4>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<div class="row"></div>
+							<div class="row">
+								<label class="col-md-4 control-label" for="taxName">Nombre:</label>
+								<div class="col-md-8"></div>
+							</div>
+							<div class="row">
+								<label class="col-md-4 control-label" for="level">Nivel:</label>
+								<div class="col-md-8"></div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="createYesButton" value="Guardar" action="#{authorBean.persist()}" update=":formAuthor"
+								oncomplete="$('#createTaxModal').modal('hide')" />
+							<p:commandButton id="createNoButton" value="Cancelar" type="button" onclick="$('#createTaxModal').modal('hide')" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+	<!-- end create Modal -->
+
+	<!-- detail Modal -->
+	<h:form id="detailTaxModalForm">
+		<div class="modal fade" id="detailTaxModal" tabindex="-1" role="dialog" aria-labelledby="Detalle de Especímenes">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">Detalle de Especímenes</h4>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<ui:repeat var="specimen" value="#{authorBean.authorSpecimens}">
+								<div class="row">
+									<h:outputText class="col-md-10" value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet} (#{specimen.commonName})" />
+									<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenDetail').show()"
+										title="Ficha técnica de #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
+										<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+									</p:commandLink>
+								</div>
+								<hr />
+							</ui:repeat>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div class="input-group">
+							<p:commandButton id="detailNoButton" value="Cerrar" type="button" onclick="$('#detailModal').modal('hide')" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</h:form>
+	<!-- end detail Modal -->
+
+	<h:form id="formAuthor">
+		<h:dataTable id="dataTableAuthor" rendered="#{authorBean.allAuthors != null and !authorBean.allAuthors.isEmpty()}" value="#{authorBean.allAuthors}"
 			var="author" styleClass="table table-hover table-condensed">
 			<h:column>
 				<f:facet name="header">Nombre Autor</f:facet>
@@ -9,23 +176,30 @@
 			</h:column>
 			<h:column>
 				<f:facet name="header">Autor Epiteto Específico</f:facet>
-				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].authorEpithet}" />
+				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].authorEpithet}" disabled="true" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">Determinador</f:facet>
-				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].determiner}" />
+				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].determiner}" disabled="true" />
 			</h:column>
 			<h:column>
 				<f:facet name="header">Colector</f:facet>
-				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].collector}">
-					<p:ajax process="@this" />
-				</p:selectBooleanCheckbox>
+				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].collector}" disabled="true" />
 			</h:column>
 			<h:column>
-				<f:facet name="header">Es usuario</f:facet>
-				<p:selectBooleanCheckbox value="#{authorBean.authorTypes[author.idAuthor].collector}">
-					<p:ajax process="@this" />
-				</p:selectBooleanCheckbox>
+				<f:facet name="header">Acciones</f:facet>
+				<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#detailModal').modal({backdrop: false})"
+					title="Ver detalle">
+					<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+				</p:commandLink>
+				<p:commandLink id="editButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#editModal').modal({backdrop: false})"
+					update="editModalForm" title="Editar autor" actionListener="#{authorBean.setAuthor(author)}">
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+				</p:commandLink>
+				<p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#deleteModal').modal({backdrop: false})"
+					title="Eliminar autor">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+				</p:commandLink>
 			</h:column>
 		</h:dataTable>
 	</h:form>
