Cambios en la administracion LoginBean Author almost done Arreglos en general

--- a/src/main/webapp/admin/taxonomy.xhtml
+++ b/src/main/webapp/admin/taxonomy.xhtml
@@ -196,8 +196,8 @@
 					actionListener="#{taxonomyBean.setDatafromNode('detail')}" icon="fa fa-folder-open"
 					oncomplete="$('#detailTaxModal').modal({backdrop: false})" />
 
-				<p:menuitem value="Borrar" actionListener="#{taxonomyBean.setDatafromNode('delete')}"
-					icon="fa fa-trash" oncomplete="$('#deleteTaxModal').modal({backdrop: false})" />
+				<p:menuitem value="Borrar" actionListener="#{taxonomyBean.setDatafromNode('delete')}" icon="fa fa-trash"
+					oncomplete="$('#deleteTaxModal').modal({backdrop: false})" />
 			</p:contextMenu>
 		</h:form>
 	</h:body>
