--- a/src/main/webapp/admin/author.xhtml
+++ b/src/main/webapp/admin/author.xhtml
@@ -1,6 +1,6 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
-	<h:form id="deleteModalForm">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+	<h:form id="deleteAuthorModalForm">
 		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="Eliminar registro">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -13,9 +13,12 @@
 					<div class="modal-body">¿Está seguro que desea eliminar este registro?</div>
 					<div class="modal-footer">
 						<div class="input-group">
-							<p:commandButton id="deleteYesButton" value="Eliminar" action="#{authorBean.delete}" update=":formAuthor"
+							<p:commandButton id="deleteYesButton" value="Eliminar" action="#{authorBean.delete}"
+								update="formAuthor, deleteAuthorModalForm, editAuthorModalForm, createAuthorModalForm"
 								oncomplete="$('#deleteModal').modal('hide')" />
-							<p:commandButton id="deleteNoButton" value="Cancelar" type="button" onclick="$('#deleteModal').modal('hide')" />
+							<p:commandButton id="deleteNoButton" value="Cancelar" type="button"
+								update="formAuthor, editAuthorModalForm, createAuthorModalForm" onclick="$('#deleteModal').modal('hide')"
+								action="#{authorBean.restartAuthorTypes()}" />
 						</div>
 					</div>
 				</div>
@@ -23,7 +26,7 @@
 		</div>
 	</h:form>
 
-	<h:form id="editModalForm">
+	<h:form id="editAuthorModalForm">
 		<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="Editar Autor">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -75,17 +78,27 @@
 									</div>
 								</div>
 							</div>
+							<hr />
 							<div class="row">
-								<label class="col-md-4 control-label" for="level">Usuario:</label>
-								<div class="col-md-8">Aqui va lo del usuario</div>
+								<label class="col-md-4 control-label" for="level">Usuario Asignado:</label>
+								<div class="col-md-8">
+									<h:selectOneMenu id="asignatedUser" class="form-control ui-state-default" value="#{authorBean.users}">
+										<f:selectItem itemValue="#{null}" itemLabel="Usuario no asignado" />
+										<f:selectItems value="#{authorBean.systemUsers}" var="user"
+											itemLabel="#{user.userNames} #{user.userLastnames}" itemValue="#{user.idUser}" />
+									</h:selectOneMenu>
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
 						<div class="input-group">
-							<p:commandButton id="editYesButton" value="Guardar" action="#{authorBean.edit()}" update=":formAuthor"
-								oncomplete="$('#editModal').modal('hide')" />
-							<p:commandButton id="editNoButton" value="Cancelar" type="button" onclick="$('#editModal').modal('hide')" />
+							<p:commandButton id="editYesButton" value="Guardar" oncomplete="$('#editModal').modal('hide')"
+								update="formAuthor, deleteAuthorModalForm, createAuthorModalForm" actionListener="#{authorBean.edit()}" />
+
+							<p:commandButton id="editNoButton" value="Cancelar" oncomplete="$('#editModal').modal('hide')"
+								update="formAuthor, deleteAuthorModalForm, createAuthorModalForm"
+								actionListener="#{authorBean.restartAuthorTypes()}" />
 						</div>
 					</div>
 				</div>
@@ -95,8 +108,8 @@
 	<!-- end edit Modal -->
 
 	<!-- create Modal -->
-	<h:form id="createTaxModalForm">
-		<div class="modal fade" id="createTaxModal" tabindex="-1" role="dialog" aria-labelledby="Crear Clasificación">
+	<h:form id="createAuthorModalForm">
+		<div class="modal fade" id="createAuthorModal" tabindex="-1" role="dialog" aria-labelledby="Crear Clasificación">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -107,22 +120,65 @@
 					</div>
 					<div class="modal-body">
 						<div class="form-group">
-							<div class="row"></div>
 							<div class="row">
-								<label class="col-md-4 control-label" for="taxName">Nombre:</label>
-								<div class="col-md-8"></div>
+								<label class="col-md-4 control-label" for="taxName">Nombre Autor:</label>
+								<div class="col-md-8">
+									<h:inputText id="authorName" styleClass="ui-state-default form-control input-sm input-block-level required"
+										value="#{authorBean.author.authorName}" required="true" requiredMessage="Debes definir el nombre del autor!">
+										<p:ajax process="@this" />
+										<f:validateBean disabled="true" />
+									</h:inputText>
+								</div>
 							</div>
+							<hr />
 							<div class="row">
-								<label class="col-md-4 control-label" for="level">Nivel:</label>
-								<div class="col-md-8"></div>
+								<label class="col-md-4 control-label" for="level">Roles de Autor:</label>
+								<div class="col-md-8">
+									<div class="row">
+										<div class="col-md-1">
+											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.authorEpithet}">
+												<p:ajax process="@this" />
+											</p:selectBooleanCheckbox>
+										</div>
+										<div class="col-md-11">Autor de Epiteto</div>
+									</div>
+									<div class="row">
+										<div class="col-md-1">
+											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.determiner}">
+												<p:ajax process="@this" />
+											</p:selectBooleanCheckbox>
+										</div>
+										<div class="col-md-11">Determinador</div>
+									</div>
+									<div class="row">
+										<div class="col-md-1">
+											<p:selectBooleanCheckbox value="#{authorBean.selectedAuthorTypes.collector}">
+												<p:ajax process="@this" />
+											</p:selectBooleanCheckbox>
+										</div>
+										<div class="col-md-11">Colector</div>
+									</div>
+								</div>
+							</div>
+							<hr />
+							<div class="row">
+								<label class="col-md-4 control-label" for="level">Usuario Asignado:</label>
+								<div class="col-md-8">
+									<h:selectOneMenu id="asignatedUser" class="form-control ui-state-default" value="#{authorBean.users}">
+										<f:selectItem itemValue="#{null}" itemLabel="Usuario no asignado" />
+										<f:selectItems value="#{authorBean.systemUsers}" var="user"
+											itemLabel="#{user.userNames} #{user.userLastnames}" itemValue="#{user.idUser}" />
+									</h:selectOneMenu>
+								</div>
 							</div>
 						</div>
 					</div>
 					<div class="modal-footer">
 						<div class="input-group">
 							<p:commandButton id="createYesButton" value="Guardar" action="#{authorBean.persist()}" update=":formAuthor"
-								oncomplete="$('#createTaxModal').modal('hide')" />
-							<p:commandButton id="createNoButton" value="Cancelar" type="button" onclick="$('#createTaxModal').modal('hide')" />
+								oncomplete="$('#createAuthorModal').modal('hide')" />
+							<p:commandButton id="createNoButton" value="Cancelar" onclick="$('#createAuthorModal').modal('hide')"
+								update="formAuthor, deleteAuthorModalForm, editAuthorModalForm" action="#{authorBean.restartAuthorTypes()}" />
 						</div>
 					</div>
 				</div>
@@ -132,7 +188,7 @@
 	<!-- end create Modal -->
 
 	<!-- detail Modal -->
-	<h:form id="detailTaxModalForm">
+	<h:form id="detailAuthorModalForm">
 		<div class="modal fade" id="detailTaxModal" tabindex="-1" role="dialog" aria-labelledby="Detalle de Especímenes">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -146,9 +202,11 @@
 						<div class="form-group">
 							<ui:repeat var="specimen" value="#{authorBean.authorSpecimens}">
 								<div class="row">
-									<h:outputText class="col-md-10" value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet} (#{specimen.commonName})" />
-									<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenDetail').show()"
-										title="Ficha técnica de #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
+									<h:outputText class="col-md-10"
+										value="#{specimen.idTaxonomy.taxonomyName} #{specimen.specificEpithet} (#{specimen.commonName})" />
+									<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action"
+										oncomplete="PF('specimenDetail').show()" title="Ficha técnica de #{specimen.commonName}"
+										actionListener="#{specimenBean.setSpecimen(specimen)}">
 										<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 									</p:commandLink>
 								</div>
@@ -168,8 +226,12 @@
 	<!-- end detail Modal -->
 
 	<h:form id="formAuthor">
-		<h:dataTable id="dataTableAuthor" rendered="#{authorBean.allAuthors != null and !authorBean.allAuthors.isEmpty()}" value="#{authorBean.allAuthors}"
-			var="author" styleClass="table table-hover table-condensed">
+		<p:growl id="growl" showDetail="true" />
+		<p:commandButton id="createButton" value="Crear nuevo autor" actionListener="#{authorBean.prepareCreate()}"
+			oncomplete="$('#createAuthorModal').modal({backdrop: false})"
+			update="formAuthor, deleteAuthorModalForm, editAuthorModalForm, createAuthorModalForm" />
+		<h:dataTable id="dataTableAuthor" rendered="#{authorBean.allAuthors != null and !authorBean.allAuthors.isEmpty()}"
+			value="#{authorBean.allAuthors}" var="author" styleClass="table table-hover table-condensed">
 			<h:column>
 				<f:facet name="header">Nombre Autor</f:facet>
 				<h:outputText value="#{author.authorName}" />
@@ -188,16 +250,17 @@
 			</h:column>
 			<h:column>
 				<f:facet name="header">Acciones</f:facet>
-				<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#detailModal').modal({backdrop: false})"
-					title="Ver detalle">
+				<p:commandLink id="viewButton" class="btn btn-default btn-sm btn-action"
+					oncomplete="$('#detailModal').modal({backdrop: false})" title="Ver detalle">
 					<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 				</p:commandLink>
-				<p:commandLink id="editButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#editModal').modal({backdrop: false})"
-					update="editModalForm" title="Editar autor" actionListener="#{authorBean.setAuthor(author)}">
+				<p:commandLink id="editButton" class="btn btn-default btn-sm btn-action"
+					oncomplete="$('#editModal').modal({backdrop: false})" update="editAuthorModalForm" title="Editar autor"
+					actionListener="#{authorBean.setAuthor(author)}">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 				</p:commandLink>
-				<p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#deleteModal').modal({backdrop: false})"
-					title="Eliminar autor">
+				<p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action"
+					oncomplete="$('#deleteModal').modal({backdrop: false})" title="Eliminar autor">
 					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 				</p:commandLink>
 			</h:column>
