--- a/src/main/webapp/admin/login.xhtml
+++ b/src/main/webapp/admin/login.xhtml
@@ -4,10 +4,10 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<title>Bienvenido a CEV :: Ingreso</title>
-	<link rel="icon" type="image/png" href="images/utils/bug-silhouette-dark.png" />
-	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-	<link href="css/default.css" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="../images/utils/bug-silhouette-dark.png" />
+	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	<script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>
+	<link href="../css/default.css" rel="stylesheet" />
 </h:head>
 <h:body>
 	<f:metadata>
@@ -39,37 +39,41 @@
 								<span class="input-group-addon">|</span>
 								<h:selectOneMenu id="recDomain" class="form-control" value="#{loginBean.revDomain}">
 									<f:selectItem itemLabel="Selecciona" />
-									<f:selectItems value="#{loginBean.institutions}" var="inst" itemLabel="#{inst.domainUrl}" itemValue="#{inst.domainUrl}" />
+									<f:selectItems value="#{loginBean.institutions}" var="inst" itemLabel="#{inst.domainUrl}"
+										itemValue="#{inst.domainUrl}" />
 								</h:selectOneMenu>
 							</div>
 						</div>
 						<div class="modal-footer">
-							<p:commandButton id="buttonRecover" onclick="$('#myModal').modal('hide');" class="btn btn-default" ajax="true" update="growl"
-								actionListener="#{loginBean.recoverPassword()}" value="Enviar" />
+							<p:commandButton id="buttonRecover" onclick="$('#myModal').modal('hide');" class="btn btn-default" ajax="true"
+								update="growl" actionListener="#{loginBean.recoverPassword()}" value="Enviar" />
 						</div>
 					</div>
 				</div>
 			</div>
 		</h:form>
 		<h:form id="loginForm">
-			<img src="images/utils/bug-contour-dark.png" class="logo-login img-responsive" />
+			<img src="../images/utils/bug-contour-dark.png" class="logo-login img-responsive" />
 			<p class="center-text">Ingreso al Centro Entomológico Virtual</p>
 			<hr />
 			<div class="form-group">
 				<label for="inputEmail">Usuario</label>
 				<div class="input-group">
-					<p:inputText id="inputEmail" class="form-control" required="true" requiredMessage="Se necesita un nombre de usuario" value="#{loginBean.user}" />
+					<p:inputText id="inputEmail" class="form-control" required="true"
+						requiredMessage="Se necesita un nombre de usuario" value="#{loginBean.user}" />
 					<span class="input-group-addon">|</span>
-					<h:selectOneMenu id="domain" class="form-control ui-state-default" required="true" requiredMessage="Se necesita un dominio registrado"
-						value="#{loginBean.domain}">
-						<f:selectItem itemLabel="Selecciona" />
-						<f:selectItems value="#{loginBean.institutions}" var="inst" itemLabel="#{inst.domainUrl}" itemValue="#{inst.domainUrl}" />
+					<h:selectOneMenu id="domain" class="form-control ui-state-default" required="true"
+						requiredMessage="Se necesita un dominio registrado" value="#{loginBean.domain}">
+						<!-- <f:selectItem itemLabel="Selecciona" /> -->
+						<f:selectItems value="#{loginBean.institutions}" var="inst" itemLabel="#{inst.domainUrl}"
+							itemValue="#{inst.domainUrl}" />
 					</h:selectOneMenu>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="inputPassword">Contraseña</label>
-				<p:password id="inputPassword" class="form-control" required="true" requiredMessage="Se necesita una contraseña" value="#{loginBean.password}" />
+				<p:password id="inputPassword" class="form-control" required="true" requiredMessage="Se necesita una contraseña"
+					value="#{loginBean.password}" />
 			</div>
 			<div class="row">
 				<a data-toggle="modal" data-target="#myModal" class="pull-right">Olvidaste tu contraseña?</a>
@@ -77,11 +81,13 @@
 			<hr />
 			<div class="row">
 				<div class="col-md-6">
-					<p:commandButton id="buttonLogin" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only btn btn-default btn-block"
+					<p:commandButton id="buttonLogin"
+						class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only btn btn-default btn-block"
 						ajax="true" update="growl" action="#{loginBean.authenticate}" value="Ingresar" />
 				</div>
 				<div class="col-md-6">
-					<h:outputLink value="/CEV" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only btn btn-default btn-block">
+					<h:outputLink value="/CEV"
+						class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only btn btn-default btn-block">
 						<span class="ui-button-text ui-c">Salir</span>
 					</h:outputLink>
 				</div>
@@ -93,8 +99,9 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p style="text-align: center;">
-						Proyecto Colección Entomológica Virtual. Todos los derechos reservados. | Fotos de <a href="http://www.google.com/images">GOOGLE</a> | Diseño
-						por <a href="#" rel="nofollow">smotavitam</a>.<br /> <span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span>
+						Proyecto Colección Entomológica Virtual. Todos los derechos reservados. | Fotos de <a
+							href="http://www.google.com/images">GOOGLE</a> | Diseño por <a href="#" rel="nofollow">smotavitam</a>.<br /> <span
+							class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span>
 					</p>
 				</div>
 			</div>
