--- a/src/main/webapp/admin/specimen.xhtml
+++ b/src/main/webapp/admin/specimen.xhtml
@@ -1,5 +1,5 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
 	<h:form id="deleteModalForm">
 		<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="Eliminar registro">
 			<div class="modal-dialog" role="document">
@@ -57,15 +57,18 @@
 					<div class="row">
 						<label class="col-md-2 control-label" for="epiteto">Nombre Taxonómico:</label>
 						<div class="col-md-2">
-							<p:autoComplete id="dd" dropdown="true" value="#{specimenBean.specimen.idTaxonomy}" completeMethod="#{specimenBean.taxonomysQuery}" var="tax"
-								itemLabel="#{tax.taxonomyName}" itemValue="#{tax}" forceSelection="true" converter="TaxonomyConverter">
+							<p:autoComplete id="dd" dropdown="true" value="#{specimenBean.specimen.idTaxonomy}"
+								completeMethod="#{specimenBean.taxonomysQuery}" var="tax" itemLabel="#{tax.taxonomyName}" itemValue="#{tax}"
+								forceSelection="true" converter="TaxonomyConverter">
 								<p:ajax process="@this" />
 							</p:autoComplete>
 						</div>
 					</div>
 				</div>
 				<hr />
-				<h:panelGroup layout="block" rendered="#{specimenBean.searchSpecimen != null and !specimenBean.searchSpecimen.isEmpty()}" styleClass="pull-right">
+				<h:panelGroup layout="block"
+					rendered="#{specimenBean.searchSpecimen != null and !specimenBean.searchSpecimen.isEmpty()}"
+					styleClass="pull-right">
 					<p>
 						Mostrando <b>#{specimenBean.searchSpecimen.size()}</b> de <b>#{specimenBean.pager.numberOfResults}</b> registros
 					</p>
@@ -73,7 +76,8 @@
 				<p:commandButton id="search" actionListener="#{specimenBean.search()}" update="formSpecimen" value="Consultar" />
 				<p:commandButton id="clear" actionListener="#{specimenBean.limpiarFiltros()}" update="formSpecimen" value="Limpiar" />
 			</div>
-			<h:dataTable id="dataTableSpecimen" rendered="#{specimenBean.searchSpecimen  != null and !specimenBean.searchSpecimen.isEmpty()}"
+			<h:dataTable id="dataTableSpecimen"
+				rendered="#{specimenBean.searchSpecimen  != null and !specimenBean.searchSpecimen.isEmpty()}"
 				value="#{specimenBean.searchSpecimen}" var="specimen" styleClass="table table-hover table-condensed">
 				<h:column>
 					<f:facet name="header">Nombre Científico</f:facet>
@@ -102,16 +106,19 @@
 						<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 					</p:commandLink>
 					<p:commandLink id="editButton" class="btn btn-default btn-sm btn-action" oncomplete="PF('specimenWizard').show()"
-						update=":formDialog :specimenWizardForm" title="Editar #{specimen.commonName}" actionListener="#{specimenBean.prepareUpdate(specimen)}">
+						update=":formDialog :specimenWizardForm" title="Editar #{specimen.commonName}"
+						actionListener="#{specimenBean.prepareUpdate(specimen)}">
 						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 					</p:commandLink>
-					<p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action" oncomplete="$('#deleteModal').modal({backdrop: false})"
-						title="Eliminar #{specimen.commonName}" actionListener="#{specimenBean.setSpecimen(specimen)}">
+					<p:commandLink id="deleteButton" class="btn btn-default btn-sm btn-action"
+						oncomplete="$('#deleteModal').modal({backdrop: false})" title="Eliminar #{specimen.commonName}"
+						actionListener="#{specimenBean.setSpecimen(specimen)}">
 						<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 					</p:commandLink>
 				</h:column>
 			</h:dataTable>
-			<h:panelGroup id="paginator" rendered="#{specimenBean.searchSpecimen != null and !specimenBean.searchSpecimen.isEmpty()}">
+			<h:panelGroup id="paginator"
+				rendered="#{specimenBean.searchSpecimen != null and !specimenBean.searchSpecimen.isEmpty()}">
 				<nav aria-label="Page navigation" class="paginador">
 					<ul class="pagination pagination-lg">
 						<li><p:commandLink id="first" title="Primera página" actionListener="#{specimenBean.pager.firstPage()}"
@@ -124,13 +131,15 @@
 							</p:commandLink></li>
 						<ui:repeat id="pager" var="i" value="#{specimenBean.pager.pages}">
 							<li><p:commandLink id="pageNumer" actionListener="#{specimenBean.pager.getPageResults(i)}"
-									class="#{specimenBean.pager.currentPage == i? 'active-page': ''}" update="formSpecimen:paginator, formSpecimen:dataTableSpecimen">#{i}</p:commandLink></li>
+									class="#{specimenBean.pager.currentPage == i? 'active-page': ''}"
+									update="formSpecimen:paginator, formSpecimen:dataTableSpecimen">#{i}</p:commandLink></li>
 						</ui:repeat>
 						<li><p:commandLink id="next" title="Siguiente página" actionListener="#{specimenBean.pager.nextPage()}"
 								update="dataTableSpecimen, paginator">
 								<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
 							</p:commandLink></li>
-						<li><p:commandLink id="last" title="Última página" actionListener="#{specimenBean.pager.lastPage()}" update="dataTableSpecimen, paginator">
+						<li><p:commandLink id="last" title="Última página" actionListener="#{specimenBean.pager.lastPage()}"
+								update="dataTableSpecimen, paginator">
 								<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 							</p:commandLink></li>
 					</ul>
@@ -140,8 +149,8 @@
 		<p:growl id="messages" showDetail="true" />
 	</h:form>
 
-	<p:dialog id="formDialog" widgetVar="specimenWizard" modal="true" resizable="false" appendTo="@(body)" header="#{specimenBean.header}"
-		closeOnEscape="true" width="500px" styleClass="disable-scroll">
+	<p:dialog id="formDialog" widgetVar="specimenWizard" modal="true" resizable="false" appendTo="@(body)"
+		header="#{specimenBean.header}" closeOnEscape="true" width="500px" styleClass="disable-scroll">
 		<h:form id="specimenWizardForm" prependId="false">
 			<p:wizard flowListener="#{specimenBean.onFlowProcess}" nextLabel="Siguiente" backLabel="Anterior">
 				<p:tab title="1">
@@ -150,8 +159,8 @@
 					<p:separator />
 					<p:outputLabel value="Selecciona una clasificación del arbol:" />
 					<p:outputPanel styleClass="tree">
-						<p:tree id="taxTree" value="#{taxonomyBean.taxRoot}" var="tax" orientation="vertical" cache="false" selectionMode="single"
-							selection="#{taxonomyBean.selectedNode}" dynamic="true" animate="true" style="width: 95%">
+						<p:tree id="taxTree" value="#{taxonomyBean.taxRoot}" var="tax" orientation="vertical" cache="false"
+							selectionMode="single" selection="#{taxonomyBean.selectedNode}" dynamic="true" animate="true" style="width: 95%">
 							<p:treeNode expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
 								<h:outputText value="#{tax}" />
 							</p:treeNode>
@@ -160,12 +169,14 @@
 					<p:separator />
 					<p:panelGrid layout="grid" columns="2">
 						<p:outputLabel value="Epiteto Específico:" for="specificEphitet" />
-						<p:inputText id="specificEphitet" value="#{specimenBean.specimen.specificEpithet}" title="Eptiteto Específico" rendered="true" />
+						<p:inputText id="specificEphitet" value="#{specimenBean.specimen.specificEpithet}" title="Eptiteto Específico"
+							rendered="true" />
 						<p:outputLabel value="Nombre Común:" for="commonName" />
-						<p:inputText id="commonName" value="#{specimenBean.specimen.commonName}" title="Nombre Común" rendered="true" required="true"
-							requiredMessage="Debes definir el nombre común!" />
+						<p:inputText id="commonName" value="#{specimenBean.specimen.commonName}" title="Nombre Común" rendered="true"
+							required="true" requiredMessage="Debes definir el nombre común!" />
 						<p:outputLabel value="Fecha:" for="idenDate" />
-						<p:calendar id="idenDate" value="#{specimenBean.specimen.idenDate}" pattern="dd-MM-yyyy" locale="es" navigator="true" />
+						<p:calendar id="idenDate" value="#{specimenBean.specimen.idenDate}" pattern="dd-MM-yyyy" locale="es"
+							navigator="true" />
 						<p:outputLabel value="Comentarios de Identificación:" for="idenComment" />
 						<p:inputTextarea id="idenComment" rows="3" value="#{specimenBean.specimen.idenComment}" />
 					</p:panelGrid>
@@ -177,8 +188,8 @@
 					<p:separator />
 					<p:outputLabel value="Selecciona una ubicación del arbol:" />
 					<p:outputPanel styleClass="tree">
-						<p:tree id="locTree" value="#{locationBean.locRoot}" var="loc" orientation="vertical" cache="true" selectionMode="single"
-							selection="#{locationBean.selectedNode}" dynamic="true" animate="true" style="width: 95%">
+						<p:tree id="locTree" value="#{locationBean.locRoot}" var="loc" orientation="vertical" cache="true"
+							selectionMode="single" selection="#{locationBean.selectedNode}" dynamic="true" animate="true" style="width: 95%">
 							<p:treeNode expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
 								<h:outputText value="#{loc}" />
 							</p:treeNode>
@@ -187,7 +198,8 @@
 					<p:separator />
 					<p:panelGrid layout="grid" columns="2">
 						<p:outputLabel value="Fecha de Colecta:" for="collectDate" />
-						<p:calendar id="collectDate" value="#{specimenBean.specimen.collectDate}" pattern="dd-MM-yyyy" locale="es" navigator="true" />
+						<p:calendar id="collectDate" value="#{specimenBean.specimen.collectDate}" pattern="dd-MM-yyyy" locale="es"
+							navigator="true" />
 						<p:outputLabel value="Comentarios de Colecta" for="collectComment" />
 						<p:inputTextarea id="collectComment" rows="3" value="#{specimenBean.specimen.collectComment}" />
 					</p:panelGrid>
@@ -199,7 +211,8 @@
 					<p:separator />
 					<p:panelGrid layout="grid" columns="2">
 						<p:outputLabel value="ID del Registro Biológico:" for="idRegBio" />
-						<p:inputText id="idRegBio" value="#{specimenBean.specimen.idBioreg}" title="ID del registro biiológico" rendered="true" />
+						<p:inputText id="idRegBio" value="#{specimenBean.specimen.idBioreg}" title="ID del registro biiológico"
+							rendered="true" />
 					</p:panelGrid>
 					<p:separator />
 				</p:tab>
@@ -214,7 +227,8 @@
 						<p:outputLabel value="Epiteto específico:" />
 						<p:outputLabel value="#{specimenBean.specimen.specificEpithet}" styleClass="bolded" />
 						<p:outputLabel value="Nombre Científico:" />
-						<p:outputLabel value="#{taxonomyBean.getNodeName().taxonomyName} #{specimenBean.specimen.specificEpithet}" styleClass="cursive bolded" />
+						<p:outputLabel value="#{taxonomyBean.getNodeName().taxonomyName} #{specimenBean.specimen.specificEpithet}"
+							styleClass="cursive bolded" />
 						<p:outputLabel value="Nombre Común:" />
 						<p:outputLabel value="#{specimenBean.specimen.commonName}" styleClass="bolded" />
 						<p:outputLabel value="Fecha de Identificación:" />
@@ -247,10 +261,10 @@
 						<p:outputLabel value="#{specimenBean.specimen.idBioreg}" styleClass="bolded" />
 					</p:panelGrid>
 					<p:separator />
-					<p:commandButton id="createSave" value="Guardar Espécimen" rendered="#{specimenBean.create}" action="#{specimenBean.persist()}"
-						update=":formSpecimen" oncomplete="PF('specimenWizard').hide()" />
-					<p:commandButton id="editSave" value="Guardar Cambios" rendered="#{!specimenBean.create}" action="#{specimenBean.edit()}" update=":formSpecimen"
-						oncomplete="PF('specimenWizard').hide()" />
+					<p:commandButton id="createSave" value="Guardar Espécimen" rendered="#{specimenBean.create}"
+						action="#{specimenBean.persist()}" update=":formSpecimen" oncomplete="PF('specimenWizard').hide()" />
+					<p:commandButton id="editSave" value="Guardar Cambios" rendered="#{!specimenBean.create}"
+						action="#{specimenBean.edit()}" update=":formSpecimen" oncomplete="PF('specimenWizard').hide()" />
 				</p:tab>
 			</p:wizard>
 		</h:form>
